- change to single property overflow to fix old android bug

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -1165,7 +1165,7 @@ header .navbar-nav {
 .groupinfobox, 
 .well {
     border-color: rgba(238,238,238,1);
-    overflow-x: scroll;
+    overflow: scroll;
 }
 
 // #925
